--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,12 +27,7 @@
     <!-- Pantalla SignUp -->
     <string name="sigUpSuccessful">Se ha creado tu usuario correctamente.</string>
 
-    <!-- Facebook Login -->
-    <string name="facebook_app_id">302572720156810</string>
-    <string name="fb_login_protocol_scheme">fb302572720156810</string>
-    <string name="fb_texto_ingreso">Ingresar con Facebook</string>
-
-    <!-- Facebook Login -->
+    <!-- Pantalla Main -->
     <string name="home">Inicio</string>
     <string name="profile">Perfil</string>
     <string name="gift">Premios</string>
@@ -47,14 +42,19 @@
     <string name="city">Ciudad</string>
     <string name="address">Dirección</string>
     <string name="neighborhood">Barrio</string>
-    <string name="phone">Telephono</string>
+    <string name="phone">Teléfono o Número de Celular</string>
     <string name="age">Edad</string>
 
  <!-- Facebook Login -->
     <string name="facebook_app_id">302572720156810</string>
     <string name="fb_login_protocol_scheme">fb302572720156810</string>
+    <string name="fb_texto_ingreso">Ingresar con Facebook</string>
     <string name="logout">Salir</string>
     <string name="map">map</string>
     <string name="get_address">Aceptar</string>
     <string name="save">Guardar</string>
+    <string name="person_height">Estatura</string>
+    <string name="person_weight">Peso</string>
+    <string name="person_childs">Cuantos hijos tienes ?</string>
+
 </resources>
