se agrega pantallas para las preguntas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,21 @@
     <string name="yes">SI</string>
     <string name="no">NO</string>
 
+    <!--Autocomplete places -->
+     <string name="place_details">
+        <![CDATA[
+            <b>%1$s</b>
+            <br/>
+            <i>Place Id: %2$s</i>
+            <br/>
+            Address: %3$s
+            <br/>
+            Phone: %4$s
+            <br/>
+            Website: %5$s
+        ]]>
+    </string>
+    <string name="intro_cervical">Este es el ejemplo de introcción a la sección de preguntas del cáncer de cervix</string>
+    <string name="intro_breast">Este es el ejemplo de introducción al cáncer de seno para iniciar el cuestionario</string>
+
 </resources>
