--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,8 +33,8 @@
     <string name="gift">Premios</string>
     <string name="main_fragmen_learn">Aprende sobre</string>
     <string name="fragment_main_gift">Reclama tus premios</string>
-    <string name="btn_breast_cancer">Cáncer de seno</string>
-    <string name="btn_cervical_cancer">Cáncer de cuello uterino</string>
+    <string name="btn_breast_cancer">Conoce sobre el <strong>Cáncer de seno</strong></string>
+    <string name="btn_cervical_cancer">Conoce sobre el <strong>Cáncer de cuello uterino</strong></string>
     <string name="btn_take_gift">Reclama tus premios</string>
     <string name="name">Nombre y apellidos</string>
     <string name="birth">Fecha de nacimiento (dd/mm/yyyy)</string>
@@ -82,5 +82,6 @@
     <string name="intro_cervical">Este es el ejemplo de introcción a la sección de preguntas del cáncer de cervix</string>
     <string name="intro_breast">Este es el ejemplo de introducción al cáncer de seno para iniciar el cuestionario</string>
     <string name="title_question">Pregunta:</string>
+    <string name="go_to_learn">Vamos a Aprender</string>
 
 </resources>
