--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,7 +82,7 @@
     <string name="email_validation_msg">El e-mail no es valido</string>
     <string name="field_required">Este campo es requerido</string>
     <string name="points">Puntos</string>
-    <string name="get_to_gift">RECLAMA TU PREMIO</string>
+    <string name="get_to_gift">Reclama tus premios</string>
     <string name="title_star_have">"TIENES "</string>
     <string name="title_end_points">" PUNTOS"</string>
     <string name="fail">¡Incorrecto!</string>
