--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,15 @@
 <resources>
-    <string name="app_name">Ámate</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Generales -->
     <string name="CARGANDO">Cargando</string>
     <string name="PROGRESS_DIALOG_MENSAJE_GENERAL">Estamos procesando tu solicitud</string>
     <string name="TITULO_ERROR">Error</string>
+    <string name="app_name">Ámate</string>
+    <string name="title_info_dialog">Información</string>
+    <string name="title_error_dialog">Error</string>
+    <string name="profile_completed">Por favor llena tu perfil antes de continuar</string>
+    <string name="network_not_available">No tiene conexión a internet</string>
 
     <!-- Pantalla Login -->
     <string name="login">Ingresar</string>
@@ -90,7 +92,9 @@
     <string name="total_points_equal">"Has obtenido menos puntos en este intento, tenías %1$s puntos y ahora has conseguido %2$s puntos. Pero no te preocupes conservarás el puntajes más alto."</string>
     <string name="total_points_up">"Has obtenido más puntos en este intento, tenías %1$s puntos y ahora has conseguido %2$s puntos."</string>
     <string name="thanks_for_answers">Gracias por responder</string>
-    <string name="end_turn">Se agotaron tus 2 oportunidades para contestar, continua con el otro cuestionario. </string>
+    <string name="end_turn">Se agotaron tus %d oportunidades para contestar, continua con el otro cuestionario. </string>
+    <string name="lapse_answer">Tienes que esperar %d día(s) para volver a responder.</string>
+
     <!--Para la tabla de premios -->
     <string-array name="head_table">
         <item>Puntos</item>
