--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="title_info_dialog">Información</string>
     <string name="title_error_dialog">Error</string>
     <string name="profile_completed">Por favor llena tu perfil antes de continuar, si ya lo has llenado solo presiona el botón (OK) y luego el botón (GUARDAR) que está arriba y a la derecha de la pantalla. Gracias.</string>
-    <string name="network_not_available">No tiene conexión a internet y es necesario para que puedas continua, verifica tu conexión y vuelve a intentar.</string>
+    <string name="network_not_available">No tiene conexión a internet y es necesario para que puedas continuar, verifica tu conexión y vuelve a intentarlo.</string>
+
 
     <!-- Pantalla Login -->
     <string name="login">Ingresar</string>
@@ -94,8 +95,8 @@
 
     <string name="fail">¡Incorrecto!</string>
     <string name="right">¡Correcto!</string>
-    <string name="total_points_equal">"Has obtenido menos puntos en este intento, tenías %1$s puntos y ahora has conseguido %2$s puntos. Pero no te preocupes conservarás el puntajes más alto."</string>
-    <string name="total_points_up">"Has obtenido más puntos en este intento, tenías %1$s puntos y ahora has conseguido %2$s puntos."</string>
+    <string name="total_points_equal">"Has obtenido menos puntos en este intento, tenías %1$s puntos y ahora has conseguido %2$s puntos. Pero no te preocupes conservarás el puntajes más alto. Vuelve a intantarlo, si tienes más oportunidades para contestar podrás subir tu puntuación."</string>
+    <string name="total_points_up">"Has obtenido más puntos en este intento, tenías %1$s puntos y ahora has conseguido %2$s puntos. Vuelve a intantarlo, si tienes más oportunidades para contestar podrás subir tu puntuación."</string>
     <string name="thanks_for_answers">Gracias por responder</string>
     <string name="end_turn">Se agotaron tus %d oportunidades para contestar, continua con el otro cuestionario. </string>
     <string name="lapse_answer">Tienes que esperar %d día(s) para volver a responder.</string>
@@ -132,5 +133,25 @@
     <string name="have_opportunities_breast">Aún tienes más oportunidades para ganar puntos con la encuesta de cancer de seno.</string>
     <string name="have_oppotunities_cervix">Aún tienes más oportunidades para ganar puntos con la encuesta de cancer de cuello uterino</string>
     <string name="dont_have_enough_points">No tienes los puntos suficientes para reclamar un premio.</string>
+    <string name="weak_password">WEAK_PASSWORD</string>
+    <string name="error_user_not_found">No existe este usuario con este email, por favor verifique.</string>
+    <string name="error_invalid_email">El ema il registrado no es válido, por favor verifique.</string>
+    <string name="error_wrong_password">La contraseña es incorrecta</string>
+    <string name="error_user_disabled">El usuario se encuentra deshabilitado</string>
+    <string name="error_email_already_in_use">Este usuario ya existe</string>
+    <string name="error_operation_not_allowed">El email y contraseña no están habilitado. Habilítelo en la consola de Firebase</string>
+    <string name="error_weak_password">La contraseña es muy débil, digite una combinación más compleja</string>
+    <string name="weak_password_second">La contraseña es débil, digite más de 6 letras o números</string>
 
+    <string name="accept">Acepto</string>
+    <string name="terms_and_conditions"><a href='https://drive.google.com/open?id=0B9amhpoFL3zha0k3VjVIeHRubW8'>Términos y Condiciones</a></string>
+    <string name="privacy_policy"><a href='https://drive.google.com/open?id=0B9amhpoFL3zha0k3VjVIeHRubW8'>Políticas de privacidad</a></string>
+
+    <string name="terms_check_validation_message">Debe aceptar los términos y condiciones</string>
+    <string name="privacy_check_validation_message">Debe aceptar las políticas de privacidad</string>
+    <string name="no_permission_my_location">No tiene permisos de localización, no podrás saber tu posición actual automáticamente.</string>
+    <string name="done_get_gift">Ya has solicitado reclamar tu premio, te estaremos informando cuando tengas más premios disponibles para reclamar. Gracias por usar nuestra aplicación y esperamos que hayas aprendido mucho. Y recuerda tu salud es lo primero.</string>
+
+    <string name="error_with_network">A network error (such as timeout, interrupted connection or unreachable host) has occurred.</string>
+    <string name="error_with_network_spanish">Hay problemas de conección con el internet, por favor verifica tu conexión y vuelve a intenarlo.</string>
 </resources>
