--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="btn_breast_cancer">Aprende sobre el <strong>cáncer de seno</strong></string>
     <string name="btn_cervical_cancer">Aprende sobre el <strong>cáncer de cuello uterino</strong></string>
     <string name="btn_take_gift">Reclama tu premio</string>
-    <string name="birth">Fecha de nacimiento (dd/mm/yyyy)</string>
+    <string name="birth">Fecha de nacimiento (dd/mm/aaaa)</string>
     <string name="country">País</string>
     <string name="city">Ciudad</string>
     <string name="address">Dirección</string>
@@ -56,9 +56,9 @@
     <string name="map">Dirección</string>
     <string name="get_address">Aceptar</string>
     <string name="save">Guardar</string>
-    <string name="person_height">Estatura (metros)</string>
-    <string name="person_weight">Peso (kilos)</string>
-    <string name="person_childs">¿Cuántos hijos tienes ?</string>
+    <string name="person_height">Estatura (metros) ejemplo: 1.67</string>
+    <string name="person_weight">Peso (kilos) ejemplo: 60</string>
+    <string name="person_childs">¿Cuántos hijos tienes?</string>
     <string name="title_profile">Perfil Usuario</string>
     <string name="selecciona_fecha_nac">Selecciona una fecha</string>
     <string name="NO_ACEPTADO_PERMISOS">Por favor acepta los permisos para poder saber tu ubicación</string>
@@ -95,7 +95,7 @@
 
     <string name="fail">¡Incorrecto!</string>
     <string name="right">¡Correcto!</string>
-    <string name="firs_total_points">Has obtenido %1$s puntos en este intento. Vuelve a intantarlo, si tienes más oportunidades para contestar podrás subir tu puntuación.</string>
+    <string name="firs_total_points">Has obtenido %1$s puntos en este intento. Vuelve a intentarlo, si tienes más oportunidades para contestar podrás subir tu puntuación.</string>
     <string name="total_points_equal">"Has obtenido menos puntos en este intento, tenías %1$s puntos y ahora has conseguido %2$s puntos. Pero no te preocupes conservarás el puntajes más alto. Vuelve a intantarlo, si tienes más oportunidades para contestar podrás subir tu puntuación."</string>
     <string name="total_points_up">"Has obtenido más puntos en este intento, tenías %1$s puntos y ahora has conseguido %2$s puntos. Vuelve a intantarlo, si tienes más oportunidades para contestar podrás subir tu puntuación."</string>
     <string name="thanks_for_answers">Gracias por responder</string>
@@ -112,8 +112,8 @@
     <string name="title_appointment">¡Recarga por cuidar tu salud!</string>
 
     <!--las keys para almacenar los valores de las respuestas en firebase -->
-    <string name="answer_label">Respuesta</string>
-    <string name="nested_label">Anidada</string>
+    <string name="answer_label">respuesta</string>
+    <string name="nested_label">anidada</string>
     <string name="password_enable">Ver Password</string>
     <string name="final_thanks">¡Gracias por usar nuestra app!</string>
 
@@ -145,8 +145,8 @@
     <string name="weak_password_second">La contraseña es débil, digite más de 6 letras o números</string>
 
     <string name="accept">Acepto</string>
-    <string name="terms_and_conditions"><a href='https://drive.google.com/open?id=0B9amhpoFL3zha0k3VjVIeHRubW8'>Términos y Condiciones</a></string>
-    <string name="privacy_policy"><a href='https://drive.google.com/open?id=0B9amhpoFL3zha0k3VjVIeHRubW8'>Políticas de privacidad</a></string>
+    <string name="terms_and_conditions">Términos y Condiciones</string>
+    <string name="privacy_policy">Políticas de privacidad</string>
 
     <string name="terms_check_validation_message">Debe aceptar los términos y condiciones</string>
     <string name="privacy_check_validation_message">Debe aceptar las políticas de privacidad</string>
@@ -157,5 +157,5 @@
     <string name="error_with_network_spanish">Hay problemas de conección con el internet, por favor verifica tu conexión y vuelve a intenarlo.</string>
     <string name="create_gmail_acount">Si no tienes una cuenta de email presiona aqui para crear una.</string>
     <string name="field_only_alphabets">Este campo solo acepta letras</string>
-    <string name="limits_phone_number">Debe tener entre 5 a 10 números</string>
+    <string name="limits_phone_number">Debe tener entre 7 a 10 números</string>
 </resources>
